typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingPublicInstance.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            428,
        ),
        hi: BytePos(
            431,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingPublicInstance.ts:25:14
   |
25 | var r3 = Base.fn(); // ok
   |              ^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            458,
        ),
        hi: BytePos(
            461,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingPublicInstance.ts:26:17
   |
26 | var r4 = Derived.fn(); // error
   |                 ^^^

